--- a/upsell/index.html
+++ b/upsell/index.html
@@ -111,8 +111,8 @@ observe cómo su vientre crece tan rápido como un globo inflado por una bomba!<
           <p class="lead">¡Sin gastar fortunas en costosos procedimientos estéticos!</p>
           <p class="lead">Eso es lo que obtienes con el protocolo cero flacideces del Dr. John...</p>
           <p class="lead">Mira, por lo general este sistema se vende generalmente por $ 107...</p>
-          <p class="lead">Pero justo hoy, puedes tener en tus manos este completo sistema anti flacideces, con un <span class="font-weight-bold">SUPER <span class="text-danger">DESCUENTO ESPECIAL</span></span> de nuevos clientes, por solo <span class="price">$27</span>...</p>
-          <p class="lead">Este representa más de <span class="font-weight-bold">$80</span> de <span class="font-weight-bold">DESCUENTO </span>...</p>
+          <p class="lead">Pero justo hoy, puedes tener en tus manos este completo sistema anti flacideces, con un <span class="font-weight-bold">SUPER <span class="text-danger">DESCUENTO ESPECIAL</span></span> de nuevos clientes, por solo <span class="price">$22</span>...</p>
+          <p class="lead">Este representa más de <span class="font-weight-bold">$84</span> de <span class="font-weight-bold">DESCUENTO </span>...</p>
           <p class="lead">Es un súper regalo del Dr. John, como agradecimiento por confiar en su trabajo...</p>
           <p class="lead">Para agregar este <span class="font-italic">Protocolo Cero Flacideces</span> a su pedido hoy, simplemente haga clic en el botón de abajo ahora mismo ...</p>
           <div id="cta">
@@ -152,7 +152,7 @@ pasaban los días. Mi matrimonio mejoró mucho después de eso. ¡Soy una mujer 
           <p class="lead">Así es como funciona...</p>
           <p class="lead">Usa el <span class="font-italic">Protocolo Cero Flacideces</span> durante 7 largos días, y si no ves que el brazo de adiós desaparece, el ombligo se endurece más y la piel alrededor de la cintura se desvanece...</p>
           <p class="lead">O si no te <span class="font-weight-bold text-danger">ENCANTA</span> el producto, y como es fácil de seguir...</p>
-          <p class="lead">Simplemente envíe un correo electrónico a contatondesaude@gmail.com, ¡y el Dr. John se asegura de devolver cada centavo de su dinero directamente a su bolsillo antes posible!</p>
+          <p class="lead">Simplemente envíe un correo electrónico a mr7.solutionss@gmail.com, ¡y el Dr. John se asegura de devolver cada centavo de su dinero directamente a su bolsillo antes posible!</p>
           <p class="lead">Todavía insiste en que <span class="font-weight-bold">mantengas</span> el producto como una forma de agradecimiento.</p>
           <p class="lead">¿No es agradable ver cómo no tienes <span class="font-weight-bold">nada</span> que perder aquí?</p>
           <p class="lead">En el peor de los casos... todavía obtienes un Sistema Súper Anti Flacideces ...<span class="font-italic">totalmente
