--- a/upsell/index.html
+++ b/upsell/index.html
@@ -55,8 +55,8 @@
           <h1 class="text-danger font-weight-bold">¡ESPERE!</h1>
           <p class="lead font-weight-bold">No haga clic hacia atrás, ¡esto puede causar errores en su solicitud!</p>
           <h3 class="font-italic">"¿Qué pasaría si pudieras mejorar aún más tus resultados?"</h3>
-          <p class="lead">¡Oye, soy Marcelo Rodríguez, del <span class="under"> Protocolo Cero Barriga!</span>!</p>
-          <p class="lead">Me gustaría felicitarle personalmente por la solicitud del del Protocolo Cero Barriga...</p>
+          <p class="lead">¡Oye, soy Marcelo Rodríguez, del <span class="under"> Protocolo Cero Vientre!</span>!</p>
+          <p class="lead">Me gustaría felicitarle personalmente por la solicitud del del Protocolo Cero Vientre...</p>
           <p class="lead">Con nuestro producto más nuevo, podrá perder peso extra y grasa de todo el cuerpo, más <span class="font-weight-bold">rápido</span> que nunca...</p>
           <p class="lead">Su inicio de sesión se envía a su correo electrónico en menos de 2 minutos...</p>
           <p class="lead">Pero mientras tanto...</p>
@@ -111,8 +111,8 @@ observe cómo su vientre crece tan rápido como un globo inflado por una bomba!<
           <p class="lead">¡Sin gastar fortunas en costosos procedimientos estéticos!</p>
           <p class="lead">Eso es lo que obtienes con el protocolo cero flacideces del Dr. John...</p>
           <p class="lead">Mira, por lo general este sistema se vende generalmente por $ 107...</p>
-          <p class="lead">Pero justo hoy, puedes tener en tus manos este completo sistema anti flacideces, con un <span class="font-weight-bold">SUPER <span class="text-danger">DESCUENTO ESPECIAL</span></span> de nuevos clientes, por solo <span class="price">$22</span>...</p>
-          <p class="lead">Este representa más de <span class="font-weight-bold">$84</span> de <span class="font-weight-bold">DESCUENTO </span>...</p>
+          <p class="lead">Pero justo hoy, puedes tener en tus manos este completo sistema anti flacideces, con un <span class="font-weight-bold">SUPER <span class="text-danger">DESCUENTO ESPECIAL</span></span> de nuevos clientes, por solo <span class="price">$27</span>...</p>
+          <p class="lead">Este representa más de <span class="font-weight-bold">$80</span> de <span class="font-weight-bold">DESCUENTO </span>...</p>
           <p class="lead">Es un súper regalo del Dr. John, como agradecimiento por confiar en su trabajo...</p>
           <p class="lead">Para agregar este <span class="font-italic">Protocolo Cero Flacideces</span> a su pedido hoy, simplemente haga clic en el botón de abajo ahora mismo ...</p>
           <div id="cta">
@@ -125,7 +125,7 @@ observe cómo su vientre crece tan rápido como un globo inflado por una bomba!<
 
 <script>
 opts = {
-key: 'USL-78482-218737-ea2de80c31200350aa8e354dc837f797',
+key: 'USL-88800-256171-b68a02dea9085446ef5d14a4ec956955',
 width: '650' ,
 height: '420'
 };
